deploy/staging/deployment-mongo-campaigns.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mop-campaigns-staging
  labels: 
    app: mongo
spec:
  ports:
    - port: 27017
  selector:
    app: mongo
    tier: database
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mongo
  namespace: mop-campaigns-staging
  labels:
    app: mongo
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mongo
      tier: database
  template:
    metadata:
      name: mongo
      labels:
        app: mongo
        tier: database
    spec:
      volumes:
      - name: mongo-campaigns-pv
        persistentVolumeClaim:
          claimName: mongo-campaigns-staging-pvc
      containers:
      - name: mongo
        image: mongo:4
        ports:
        - containerPort: 27017
