deploy/staging/deployment-users.yml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: mop-users-ingress
  namespace: mop-users-staging
  labels:
    app: mop-resources-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: users.mop.lappis.rocks
    http:
      paths:
      - backend:
          serviceName: mop-users-svc
          servicePort: 80
  tls:
  - hosts:
    - users.mop.lappis.rocks
    secretName: mop-users-staging-letsencrypt-prod-crt
---
apiVersion: v1
kind: Service
metadata:
  name: mop-users-svc
  namespace: mop-users-staging
  labels:
    app: mop-users-staging
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: mop-users-staging
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mop-users-deployment
  namespace: mop-users-staging
  labels:
    app: mop-users-staging
spec:
  selector:
    matchLabels:
      app: mop-users-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: mop-users-staging
    spec:
      containers:
      - name: mop-users-staging
        image: registry.lappis.rocks/mop-users:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 5000
          protocol: TCP
